Fixed OA icon clipping

--- a/src/app/component/results/publications/publications.component.scss
+++ b/src/app/component/results/publications/publications.component.scss
@@ -35,7 +35,7 @@
     .open-access-image {
         background-image: url(../../../../assets/openaccess.svg);
         background-size: cover;
-        height: 15px;
+        height: 16px;
         width: 10px;
         padding: 0;
         margin-right: 5px;
